Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN1iSo18Jwhmti07Y5hbCXl",
+      "authorship_tag": "ABX9TyOJP9dpjp4y73yBZEvJFYNy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2198,7 +2198,7 @@
         "  cout << \"Your name is: \" << fullName;\n",
         "}\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2221,7 +2221,7 @@
       "source": [
         "!g++ temp.cpp; echo Abraham Lincoln | ./a.out"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2263,7 +2263,7 @@
         "  cout << max(5, 10);\n",
         "}"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2286,7 +2286,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2324,7 +2324,7 @@
         "  cout << sqrt(2) << endl; // 白銀比 1.414213562373095\n",
         "}"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2347,7 +2347,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2447,7 +2447,7 @@
         "  cout << isFishTasty;\n",
         "}"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2470,7 +2470,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2612,23 +2612,17 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "GufAABfIgIVe"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "XcesfRGD7Zei"
+        "id": "XcesfRGD7Zei",
+        "outputId": "0df2eee9-ec6f-4c8e-b71c-d85b3afc6bce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# switch 構文\n",
         "%%writefile temp.cpp\n",
-        "\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
@@ -2659,19 +2653,39 @@
         "  }\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "q729GEbV7e4R"
+        "id": "q729GEbV7e4R",
+        "outputId": "5f99095e-4c6b-4d6b-93ea-f10b37cc5c13",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ThursdayFridaySaturday"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2681,6 +2695,7 @@
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
+        "\n",
         "string num2week(int day) {\n",
         "  switch (day) {\n",
         "  case 1: return \"Monday\";\n",
@@ -2700,10 +2715,22 @@
         "}"
       ],
       "metadata": {
-        "id": "kfPfajHEt45j"
+        "id": "kfPfajHEt45j",
+        "outputId": "53a118de-5dee-42bb-cd9e-ea3ca4d5baf9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2714,15 +2741,34 @@
         "!g++ temp.cpp; echo えっと |./a.out #=> int でないものが入力されても default が返る"
       ],
       "metadata": {
-        "id": "REo34TtSfqCd"
+        "id": "REo34TtSfqCd",
+        "outputId": "550754d5-aacb-4b96-92a0-b00e43b7a5ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Thursday\n",
+            "Friday\n",
+            "何?\n",
+            "何?\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ihhwaJtn4JMD"
+        "id": "ihhwaJtn4JMD",
+        "outputId": "a5cb7caf-1154-48ca-f9de-dc1b1041c77c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# while 構文\n",
@@ -2731,27 +2777,53 @@
         "using namespace std;\n",
         "\n",
         "int main() {\n",
-        "  int i = 0;\n",
+        "  int i;\n",
+        "  cin >> i;\n",
         "  while (i < 5) {\n",
         "    cout << i << endl;\n",
         "    i++;\n",
         "  }\n",
-        "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zcOgtPoW4Jpz"
+        "id": "zcOgtPoW4Jpz",
+        "outputId": "3dd8be8c-cfa2-4953-8153-68d6fc3a8507",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "!g++ temp.cpp; ./a.out"
+        "!g++ temp.cpp; echo -2 |./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-2\n",
+            "-1\n",
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2765,13 +2837,13 @@
         "using namespace std;\n",
         "\n",
         "int main() {\n",
-        "  int i = 0;\n",
+        "  int i;\n",
+        "  cin >> i;\n",
         "  do {\n",
         "    cout << i << endl;\n",
         "    i++;\n",
         "  }\n",
         "  while (i < 5);\n",
-        "  return 0;\n",
         "}\n"
       ],
       "execution_count": null,
@@ -2780,13 +2852,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T5EZk3rj4dp_"
+        "id": "T5EZk3rj4dp_",
+        "outputId": "bee7f8e4-8cc1-43fd-b354-3cbae28e11e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "!g++ temp.cpp; ./a.out"
+        "!g++ temp.cpp; echo 0 |./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2803,8 +2891,7 @@
         "  for (int i = 0; i < 5; i++) {\n",
         "    cout << i << endl;\n",
         "  }\n",
-        "  return 0;\n",
-        "}\n"
+        "}"
       ],
       "execution_count": null,
       "outputs": []
@@ -2835,7 +2922,6 @@
         "  for (int i = 0; i <= 10; i = i + 2) {\n",
         "    cout << i << endl;\n",
         "  }\n",
-        "  return 0;\n",
         "}"
       ],
       "execution_count": null,
@@ -2870,8 +2956,7 @@
         "    }\n",
         "    cout << i << endl;\n",
         "  }   \n",
-        "  return 0;\n",
-        "}\n"
+        "}"
       ],
       "execution_count": null,
       "outputs": []
@@ -2890,69 +2975,112 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qf_0WEWnl4yx"
+        "id": "qf_0WEWnl4yx",
+        "outputId": "cabea3cf-7bb1-41fa-c86b-cf1f24254fbf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# 配列\n",
-        "# 次のは C の配列で、今はあまり使われないのではないか\n",
-        "# array もある。list もある。が、基本的に vector に書き換えよう\n",
-        "%%writefile temp.cpp\n",
-        "# include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "int main() {\n",
-        "  // string cars[4] = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
-        "  // cout << cars[0];\n",
-        "  vector<string> cars = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
-        "  cout << cars.at(0) << endl;\n",
-        "}"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "e3onRGAemAhi"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "JickdBaumMKJ"
-      },
-      "source": [
-        "# C の配列は項の書き換えが出来る\n",
+        "# C の配列, array もある。list もある。が、基本的に vector にしよう\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
-        "    /* string cars[4] = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
-        "    cars[0] = \"Opel\";\n",
-        "    cout << cars[0]; */\n",
+        "  vector<string> cars = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
+        "  cout << cars.at(0) << endl;\n",
+        "}"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e3onRGAemAhi",
+        "outputId": "95e47563-c0d9-4913-c96e-fe4e88bc749c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Volvo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JickdBaumMKJ",
+        "outputId": "3d906274-3d77-44bf-d2dc-416e50694826",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 項の書き換えが出来る\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
         "    vector<string> cars = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
         "    cars.at(0) = \"Opel\";\n",
         "    cout << cars.at(0) << endl;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xME08Ssamati"
+        "id": "xME08Ssamati",
+        "outputId": "b35feac7-1209-4176-a84b-76b9486cddae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Opel\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2963,6 +3091,7 @@
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
+        "\n",
         "int main(){\n",
         "    vector<string> cars = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
         "    for(int i = 0; i < 4; i++) {\n",
@@ -2976,13 +3105,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jy8wA-48mq-n"
+        "id": "jy8wA-48mq-n",
+        "outputId": "537846a6-eaa0-41ad-d764-785a39ba4aa6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Volvo\n",
+            "BMW\n",
+            "Ford\n",
+            "Mazda\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "z3od9ZrCjX1r"
+      }
     },
     {
       "cell_type": "code",
@@ -2993,6 +3146,7 @@
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
+        "\n",
         "int main() {\n",
         "  vector<string> cars = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
         "  for(int i = 0; i < 4; i++) {\n",
