--- a/temp.ipynb
+++ b/temp.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "temp.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNviv4jGmiHSLyC1ru0YDaj",
+      "authorship_tag": "ABX9TyM7Zq7TA3Ho6s56RW7oYqxd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +38,78 @@
     {
       "cell_type": "code",
       "source": [
+        "# 初恋で実験\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "const string  str = R\"(まだあげ初めし前髪の\n",
+        "林檎のもとに見えしとき\n",
+        "前にさしたる花櫛(はなぐし)の\n",
+        "花ある君と思ひけり)\";\n",
+        "\n",
+        "int main () {\n",
+        "  ofstream ofs(\"temp.txt\"); \n",
+        "  string line;\n",
+        "  stringstream ss(str);\n",
+        "  while (getline(ss, line)) {\n",
+        "      ofs << line << endl;\n",
+        "  }\n",
+        "\n",
+        "  ifstream ifs(\"temp.txt\");\n",
+        "  while (getline (ifs, line)) {\n",
+        "    cout << line << endl;\n",
+        "  }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "p4XelHtyZfmc",
+        "outputId": "2f36593e-fd52-4aa4-d1ca-258c9e4247ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "I7AyIf6IZg3A",
+        "outputId": "ac4e288a-a286-445a-f8fc-99a790297228",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "    まだあげ初めし前髪の\n",
+            "林檎のもとに見えしとき\n",
+            "前にさしたる花櫛(はなぐし)の\n",
+            "花ある君と思ひけり\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# How to convert vector to set?\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
@@ -59,7 +130,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +153,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +219,7 @@
         },
         "outputId": "47e727e5-5a5b-4507-a011-b305601d8a87"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +242,7 @@
         "id": "tB4feUBfl8Jl",
         "outputId": "dd453b3a-dbf0-4f07-bf80-9d97f90fda10"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +313,7 @@
         "id": "rI6OtbnWrk5N",
         "outputId": "d17b8a2c-639f-49ce-9604-78c14c21a222"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +336,7 @@
         "id": "xN-bjdaTrkxZ",
         "outputId": "7d26d3bb-e8bd-4c8a-c372-3f53eafab46a"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,7 +743,6 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "const string  str = R\"(\n",
-        "まだ生えそめし前髪の\n",
         "まだあげ初めし前髪の\n",
         "林檎のもとに見えしとき\n",
         "前にさしたる花櫛(はなぐし)の\n",
