Colaboratory を使用して作成しました

--- a/cpp_problems.ipynb
+++ b/cpp_problems.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "cpp_problems.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNFN0PzARm9+vTBcEW5ioce",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMKvcXJSsOy5kWqljpA+wF8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,7 +106,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +130,7 @@
         "!g++ temp.cpp; echo 10 | ./a.out\n",
         "!g++ temp.cpp; echo 2.7 | ./a.out"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,19 +143,10 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "0bDc_U3KEiSd"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "問題 ITP1_1_C: Rectangle\n",
-        "# たて a cm よこ b cm の長方形の面積と周の長さを求める。\n",
+        "# 問題 ITP1_1_C: Rectangle\n",
+        "# 縦 a cm 横 b cm の長方形の面積と周の長さを求める。\n",
         "# 例: 5 6 => 30 22\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h> \n",
@@ -164,7 +156,7 @@
         "    double x,y;\n",
         "    cin >> x >> y;\n",
         "    cout << x * y << \" \" << (x + y) * 2 << \"\\n\";\n",
-        "}\n"
+        "}"
       ],
       "metadata": {
         "id": "iKpT7KqTgltN",
@@ -173,7 +165,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +188,7 @@
       "source": [
         "!g++ temp.cpp; echo 5 6 | ./a.out"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,30 +200,11 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7WEEQyGZg_60"
-      },
-      "source": [
-        "\n",
-        "問題  \n",
-        "ITP1_1_D: Watch\n",
-        "\n",
-        "秒 $S$ を $h:m:s:$ の形式に変換する。\n",
-        "\n",
-        "例: 46979 => 13:2:59"
-      ]
-    },
-    {
       "cell_type": "code",
-      "metadata": {
-        "id": "aK6zM5ykj0zK",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "fe207239-6597-4aa7-d1cf-90b6145f9a1c"
-      },
       "source": [
+        "# 問題 ITP1_1_D: Watch\n",
+        "# 秒 s を $h:m:s:$ の形式に変換する。\n",
+        "# 例: 46979 => 13:2:59\n",
         "%%writefile watch.cpp\n",
         "# include <bits/stdc++.h> \n",
         "\n",
@@ -243,18 +216,13 @@
         "    m = s / 60;\n",
         "    s %= 60;\n",
         "    cout << h << \":\" << m << \":\" << s << \"\\n\";\n",
-        "}\n"
+        "}"
       ],
+      "metadata": {
+        "id": "7WEEQyGZg_60"
+      },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting watch.cpp\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -278,6 +246,15 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "0bDc_U3KEiSd"
+      }
     },
     {
       "cell_type": "markdown",
@@ -378,7 +355,6 @@
       },
       "source": [
         "%%writefile range01.cpp\n",
-        "\n",
         "# include <bits/stdc++.h> \n",
         "\n",
         "int main (){\n",
@@ -425,33 +401,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iyoXo1SGx5l7"
-      },
-      "source": [
-        "問題   \n",
-        "ITP1_2_C: Sorting Three Numbers  \n",
-        "\n",
-        "３つの整数を読み込み、それらを値が小さい順に並べて出力する。\n",
-        "\n",
-        "例: 3 1 8 => 1 3 8"
-      ]
-    },
-    {
       "cell_type": "code",
-      "metadata": {
-        "id": "JRReTAsqPdSM",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "57a630db-a3be-4fb7-c014-d2df0b7e4d91"
-      },
       "source": [
+        "# 問題 ITP1_2_C: Sorting Three Numbers  \n",
+        "# ３つの整数を読み込み、それらを値が小さい順に並べて出力する。\n",
+        "# 例: 3 1 8 => 1 3 8\n",
         "%%writefile sort3num.cpp\n",
         "# include <bits/stdc++.h> \n",
-        "#include <vector>\n",
-        "#include <algorithm>\n",
         "\n",
         "int main (){\n",
         "    int x;\n",
@@ -465,16 +421,11 @@
         "    cout << v[0] << ' '<< v[1] << ' '<< v[2] << \"\\n\";\n",
         "}"
       ],
+      "metadata": {
+        "id": "iyoXo1SGx5l7"
+      },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Writing sort3num.cpp\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -506,7 +457,7 @@
       },
       "source": [
         "問題   ITP1_2_D: Circle in a Rectangle\n",
-        "長方形の中に円が含まれるかを判定する。長方形は左下の頂点を原点とし、右上の頂点の座標 ($W$, $H$) が与えられ、円はその中心の座標 (x, $y$)と半径 $r$ が与えられる。\n",
+        "長方形の中に円が含まれるかを判定する。長方形は左下の頂点を原点とし、右上の頂点の座標 (W, H) が与えられ、円はその中心の座標 (x, $y$)と半径 $r$ が与えられる。\n",
         "\n",
         "例: 5 4 2 2 1 => Yes"
       ]
@@ -1174,7 +1125,7 @@
       },
       "source": [
         "### ITP1_5_A: Print a Rectangle\n",
-        "たて $H$ cm よこ $W$ cm の長方形を描く。 '#'で表す。 0, 0 のとき入力の終わり。\n",
+        "縦 $H$ cm 横 W cm の長方形を描く。 '#'で表す。 0, 0 のとき入力の終わり。\n",
         "\n",
         "例: 3 4 5 6 2 2 0 0 =>  \n"
       ]
@@ -1292,7 +1243,7 @@
       },
       "source": [
         "### ITP1_5_B: Print a Frame\n",
-        "たて \"H\" cm よこ \"W\" cm の枠を描く。\n",
+        "縦 \"H\" cm 横 \"W\" cm の枠を描く。\n",
         "\"H\", \"W\" がともに 0 のとき、入力の終わり。\n",
         "\n",
         "例: 3 4 5 6 3 3 0 0 =>  "
@@ -1417,7 +1368,7 @@
       "source": [
         "問題   ITP1_5_C: Print a Chessboard\n",
         "チェスボードの描画。\n",
-        "たて $H$ cm よこ $W$ cm のチェック柄の長方形を描く。 左上が \"#\"。$H$、$W$ がともに 0 のとき、入力の終わり。\n",
+        "縦 $H$ cm 横 W cm のチェック柄の長方形を描く。 左上が \"#\"。$H$、W がともに 0 のとき、入力の終わり。\n",
         "\n",
         "例: 3 4 5 6 3 3 2 2 1 1 0 0 =>"
       ]
@@ -2730,7 +2681,7 @@
       },
       "source": [
         "問題   ITP1_8_D: Ring\n",
-        "リング状の文字列 $s$ の任意の位置から、時計回りに文字列 $p$ が作れるかを判定する。\n",
+        "リング状の文字列 s の任意の位置から、時計回りに文字列 $p$ が作れるかを判定する。\n",
         "\n",
         "例: vanceknowledgetoad advance => Yes\n"
       ]
@@ -2801,9 +2752,9 @@
       },
       "source": [
         "問題   ITP1_9_A: Finding a Word\n",
-        "単語 $W$ と文章 $T$ で、$T$ の中にある $W$ の数を出力する。\n",
-        "すべての単語 $T_i$ において単語 $W$ と同じになるものを数える。\n",
-        "大文字と小文字は区別しない。$W$ に含まれる文字はすべてアルファベット小文字。\n",
+        "単語 W と文章 $T$ で、$T$ の中にある W の数を出力する。\n",
+        "すべての単語 $T_i$ において単語 W と同じになるものを数える。\n",
+        "大文字と小文字は区別しない。W に含まれる文字はすべてアルファベット小文字。\n",
         "$T$ は、END_OF_TEXT という文字列が文章の終わりを示す。\n",
         "\n",
         "例: computer Nurtures computer scientists and highly-skilled computer engineers who will create and exploit $knowledge$ for the new era. Provides an outstanding computer environment. END_OF_TEXT\n",
@@ -2892,9 +2843,9 @@
       },
       "source": [
         "問題   ITP1_9_B: Shuffle\n",
-        "アルファベットの $n$ 枚のカードの山をシャッフルする。 シャッフルでは、$h$ 枚のカードをまとめて取り出し、それを残ったカードの山の上に積み上げる。例えば、abcdeefab を $h$ が 4 でシャッフルすると、eefababcd になる。 このシャッフルを何回か繰り返す。\n",
+        "アルファベットの $n$ 枚のカードの山をシャッフルする。 シャッフルでは、h 枚のカードをまとめて取り出し、それを残ったカードの山の上に積み上げる。例えば、abcdeefab を h が 4 でシャッフルすると、eefababcd になる。 このシャッフルを何回か繰り返す。\n",
         "\n",
-        "カードの山の最初の並びと $h$ の列を読み込み、最後の並びを出力する。 文字列が \"-\" のとき入力の終わりとする。\n",
+        "カードの山の最初の並びと h の列を読み込み、最後の並びを出力する。 文字列が \"-\" のとき入力の終わりとする。\n",
         "\n",
         "\n",
         " 例: aabc 3 1 2 1 vwxyz 2 3 4 - =>   \n",
