Colaboratory を使用して作成しました

--- a/cpp_problems.ipynb
+++ b/cpp_problems.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_problems.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPXHi10p07wFJAqnKQdqg5k",
+      "authorship_tag": "ABX9TyNZ5ijEZQLTDcbX/v7VXP5q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -235,7 +235,7 @@
         "outputId": "326e3db5-9e93-424b-c7fc-f18464ea04d0"
       },
       "source": [
-        "!g++ watch.cpp -o watch; echo 46979 |./a.out"
+        "!g++ watch.cpp; echo 46979 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -270,10 +270,10 @@
       ],
       "metadata": {
         "id": "__duxO9RhD7e",
-        "outputId": "cdf18918-081a-4565-ce4e-38883f5efdd3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cdf18918-081a-4565-ce4e-38883f5efdd3"
       },
       "execution_count": 1,
       "outputs": [
@@ -330,10 +330,10 @@
       ],
       "metadata": {
         "id": "08AyIO3qx2Q9",
-        "outputId": "4168f8e0-25a1-4f2c-fa92-8b638e00a524",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4168f8e0-25a1-4f2c-fa92-8b638e00a524"
       },
       "execution_count": 3,
       "outputs": [
@@ -456,10 +456,10 @@
       ],
       "metadata": {
         "id": "UpNiAmlPx62S",
-        "outputId": "374029d2-6af5-4f49-d0bc-4b8d6dc89542",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "374029d2-6af5-4f49-d0bc-4b8d6dc89542"
       },
       "execution_count": 7,
       "outputs": [
@@ -512,10 +512,10 @@
       ],
       "metadata": {
         "id": "lpLwTcGJx8Hi",
-        "outputId": "47aa7d43-62c6-4c15-81f9-a3e4a3539204",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "47aa7d43-62c6-4c15-81f9-a3e4a3539204"
       },
       "execution_count": 9,
       "outputs": [
@@ -565,10 +565,10 @@
       ],
       "metadata": {
         "id": "42x5aLj6NMnw",
-        "outputId": "704d07ed-3356-4bf8-9358-47f1ef4ffff4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "704d07ed-3356-4bf8-9358-47f1ef4ffff4"
       },
       "execution_count": 12,
       "outputs": [
@@ -639,10 +639,10 @@
       ],
       "metadata": {
         "id": "h0P_lhLix4BL",
-        "outputId": "da18e9fa-7cf0-4213-db1f-7bb765bb1f46",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "da18e9fa-7cf0-4213-db1f-7bb765bb1f46"
       },
       "execution_count": 14,
       "outputs": [
@@ -701,10 +701,10 @@
       ],
       "metadata": {
         "id": "g14FT6YDSLcK",
-        "outputId": "1a3e8c1c-9d20-4712-daa2-152c08429cb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1a3e8c1c-9d20-4712-daa2-152c08429cb2"
       },
       "execution_count": 16,
       "outputs": [
@@ -761,10 +761,10 @@
       ],
       "metadata": {
         "id": "iG1eyRf9SNQx",
-        "outputId": "c972466b-3d09-4a96-b531-64d8b10ba3c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c972466b-3d09-4a96-b531-64d8b10ba3c8"
       },
       "execution_count": 20,
       "outputs": [
@@ -863,7 +863,7 @@
         "outputId": "0da7e97b-2f66-4c4b-f432-b40592919827"
       },
       "source": [
-        "!g++ circle01.cpp -o circle01; echo 3 |./a.out"
+        "!g++ circle01.cpp; echo 3 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -943,7 +943,7 @@
         "outputId": "bd45703a-4264-47bc-80be-3eb48fdc2b9e"
       },
       "source": [
-        "!g++ simplecalculator.cpp -o simplecalculator; echo 1 + 2 56 - 18 13 \\* 2 100 / 10 27 + 81 0 ? 0 |./a.out"
+        "!g++ simplecalculator.cpp; echo 1 + 2 56 - 18 13 \\* 2 100 / 10 27 + 81 0 ? 0 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -1024,7 +1024,7 @@
         "outputId": "5c6cc8d0-370a-4942-dab7-fd52315d159e"
       },
       "source": [
-        "!g++ minmaxsum.cpp -o minmaxsum; echo 5 10 1 5 4 17 |./a.out"
+        "!g++ minmaxsum.cpp; echo 5 10 1 5 4 17 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -1130,7 +1130,7 @@
         "outputId": "c396f336-f924-48aa-ffe4-7991192705df"
       },
       "source": [
-        "!g++ printrectangle.cpp -o printrectangle; echo 3 4 5 6 2 2 0 0 |./a.out"
+        "!g++ printrectangle.cpp; echo 3 4 5 6 2 2 0 0 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -1253,7 +1253,7 @@
         "outputId": "bd94837c-4af7-4d8f-d776-c319c3497e9e"
       },
       "source": [
-        "!g++ printframe.cpp -o printframe; echo 3 4 5 6 3 3 0 0 |./a.out"
+        "!g++ printframe.cpp; echo 3 4 5 6 3 3 0 0 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -1378,7 +1378,7 @@
         "outputId": "26eae636-b618-4eae-8e29-76bf2f91f799"
       },
       "source": [
-        "!g++ chessboard.cpp -o chessboard; echo 3 4 5 6 3 3 2 2 1 1 0 0 |./a.out"
+        "!g++ chessboard.cpp; echo 3 4 5 6 3 3 2 2 1 1 0 0 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -1478,7 +1478,7 @@
         "outputId": "6f4f18ef-02ec-4f66-b606-b28a33d677a2"
       },
       "source": [
-        "!g++ structuredprogramming.cpp -o structuredprogramming; echo 30 |./a.out"
+        "!g++ structuredprogramming.cpp; echo 30 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -1548,7 +1548,7 @@
         "outputId": "0b8a2b7f-19e2-4405-89ca-526647303258"
       },
       "source": [
-        "!g++ reversenumber.cpp -o reversenumber; echo 5 1 2 3 4 5 |./a.out"
+        "!g++ reversenumber.cpp; echo 5 1 2 3 4 5 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -1644,7 +1644,7 @@
         "outputId": "98be8c47-712b-45ca-8299-e608c541d2b2"
       },
       "source": [
-        "!g++ findmissingcard.cpp -o findmissingcard; echo  47 S 10 S 11 S 12 S 13 H 1 H 2 S 6 S 7 S 8 S 9 H 6 H 8 H 9 H 10 H 11 H 4 H 5 S 2 S 3 S 4 S 5 H 12 H 13 C 1 C 2 D 1 D 2 D 3 D 4 D 5 D 6 D 7 C 3 C 4 C 5 C 6 C 7 C 8 C 9 C 10 C 11 C 13 D 9 D 10 D 11 D 12 D 13 |./a.out"
+        "!g++ findmissingcard.cpp; echo  47 S 10 S 11 S 12 S 13 H 1 H 2 S 6 S 7 S 8 S 9 H 6 H 8 H 9 H 10 H 11 H 4 H 5 S 2 S 3 S 4 S 5 H 12 H 13 C 1 C 2 D 1 D 2 D 3 D 4 D 5 D 6 D 7 C 3 C 4 C 5 C 6 C 7 C 8 C 9 C 10 C 11 C 13 D 9 D 10 D 11 D 12 D 13 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -1793,7 +1793,7 @@
         "outputId": "2f1455ef-c14c-4344-e182-d191ca31f742"
       },
       "source": [
-        "!g++ officialhouse.cpp -o officialhouse; echo 3 1 1 3 8 3 2 2 7 4 3 8 1 |./a.out"
+        "!g++ officialhouse.cpp; echo 3 1 1 3 8 3 2 2 7 4 3 8 1 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -1887,7 +1887,7 @@
         "outputId": "e7972665-0643-4732-d0aa-919b0a94be5b"
       },
       "source": [
-        "!g++ matrixvectormultiplication.cpp -o matrixvectormultiplication; echo 3 4 1 2 0 1 0 3 0 1 4 1 1 0 1 2 3 0 |./a.out"
+        "!g++ matrixvectormultiplication.cpp; echo 3 4 1 2 0 1 0 3 0 1 4 1 1 0 1 2 3 0 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -1993,7 +1993,7 @@
         "outputId": "7a255ac9-5293-483f-dd19-b94d62ab5859"
       },
       "source": [
-        "!g++ grading.cpp -o grading; echo 40 42 -1 20 30 -1 0 2 -1 -1 -1 -1 |./a.out"
+        "!g++ grading.cpp; echo 40 42 -1 20 30 -1 0 2 -1 -1 -1 -1 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -2083,7 +2083,7 @@
         "outputId": "530b66c8-be11-40c8-ec83-5b350bb43732"
       },
       "source": [
-        "!g++ howmanyway.cpp -o howmanyway; echo 5 9 0 0 |./a.out"
+        "!g++ howmanyway.cpp; echo 5 9 0 0 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -2174,7 +2174,7 @@
         "outputId": "f555a113-0736-4c29-a7c3-0bb89c210b04"
       },
       "source": [
-        "!g++ spreadsheet.cpp -o spreadsheet; echo 4 5 1 1 3 4 5 2 2 2 4 5 3 3 0 1 1 2 3 4 4 6 |./a.out"
+        "!g++ spreadsheet.cpp; echo 4 5 1 1 3 4 5 2 2 2 4 5 3 3 0 1 1 2 3 4 4 6 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -2307,7 +2307,7 @@
         "outputId": "56491bc6-0413-49dd-dd9f-36e1f734aaae"
       },
       "source": [
-        "!g++ matrixmultiplication.cpp -o matrixmultiplication; echo 3 2 3 1 2 0 3 4 5 1 2 1 0 3 2 |./a.out"
+        "!g++ matrixmultiplication.cpp; echo 3 2 3 1 2 0 3 4 5 1 2 1 0 3 2 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -2384,7 +2384,7 @@
         "outputId": "11b77dd3-f07b-4e09-d8b3-143400caa619"
       },
       "source": [
-        "!g++ togglecase.cpp -o togglecase; echo fAIR, LATER, OCCASIONALLY CLOUDY.  |./a.out"
+        "!g++ togglecase.cpp; echo fAIR, LATER, OCCASIONALLY CLOUDY.  |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -2472,7 +2472,7 @@
         "outputId": "59d1eed3-23db-4149-dcfd-204e014c1f55"
       },
       "source": [
-        "!g++ sumofnum01.cpp -o sumofnum01; echo 123 55 1000 0  |./a.out"
+        "!g++ sumofnum01.cpp; echo 123 55 1000 0  |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -2555,7 +2555,7 @@
         "outputId": "b86c70ca-6e66-47c7-c4e7-758b360b9f69"
       },
       "source": [
-        "!g++ countcharacter.cpp -o countcharacter; echo This is a pen. |./a.out"
+        "!g++ countcharacter.cpp; echo This is a pen. |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -2651,7 +2651,7 @@
         "outputId": "6aca43fa-f24a-4ee4-906c-c7ee4ee5d408"
       },
       "source": [
-        "!g++ ring01.cpp -o ring01; echo vanceknowledgetoad advance |./a.out"
+        "!g++ ring01.cpp; echo vanceknowledgetoad advance |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -2742,7 +2742,7 @@
         "outputId": "837b2fb7-712a-4292-b398-06fd5739e632"
       },
       "source": [
-        "!g++ findword.cpp -o findword; echo computer Nurtures computer scientists and highly-skilled computer engineers who will create and exploit  knowledge  for the new era. Provides an outstanding computer environment. END_OF_TEXT |./a.out"
+        "!g++ findword.cpp; echo computer Nurtures computer scientists and highly-skilled computer engineers who will create and exploit  knowledge  for the new era. Provides an outstanding computer environment. END_OF_TEXT |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -2829,7 +2829,7 @@
         "outputId": "b14da4fc-1f7e-44ad-a54b-f5e642eb6844"
       },
       "source": [
-        "!g++ shuffle01.cpp -o shuffle01; echo aabc 3 1 2 1 vwxyz 2 3 4 - |./a.out"
+        "!g++ shuffle01.cpp; echo aabc 3 1 2 1 vwxyz 2 3 4 - |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -2910,7 +2910,7 @@
         "outputId": "b61ee270-441a-4d3d-f694-5db153ef7e98"
       },
       "source": [
-        "!g++ cardgame.cpp -o cardgame; echo 3 cat dog fish fish lion tiger |./a.out"
+        "!g++ cardgame.cpp; echo 3 cat dog fish fish lion tiger |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -2997,7 +2997,7 @@
         "outputId": "09b85ae6-9f68-4b9d-98a4-60ceb1352d16"
       },
       "source": [
-        "!g++ transform.cpp -o transform; echo abcde 3 replace 1 3 xyz reverse 0 2 print 1 4 |./a.out"
+        "!g++ transform.cpp; echo abcde 3 replace 1 3 xyz reverse 0 2 print 1 4 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -3068,7 +3068,7 @@
         "outputId": "57819bec-00b6-4429-9e5f-6076a51cb945"
       },
       "source": [
-        "!g++ distancepoint01.cpp -o distancepoint01; echo 0 0 1 1 |./a.out"
+        "!g++ distancepoint01.cpp; echo 0 0 1 1 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -3151,7 +3151,7 @@
         "outputId": "1805f2ca-b6b1-41dc-87df-83e237741ce3"
       },
       "source": [
-        "!g++ triangle01.cpp -o triangle01; echo 4 3 90 |./a.out"
+        "!g++ triangle01.cpp; echo 4 3 90 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -3246,7 +3246,7 @@
         "outputId": "28c89dd9-7434-4740-9503-3829a5696af3"
       },
       "source": [
-        "!g++ standarddeviation.cpp -o standarddeviation; echo 5 70 80 100 90 20 3 80 80 80 0 |./a.out"
+        "!g++ standarddeviation.cpp; echo 5 70 80 100 90 20 3 80 80 80 0 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -3385,7 +3385,7 @@
         "outputId": "62259f6f-1cca-42bc-e891-48b92c9b4db2"
       },
       "source": [
-        "!g++ distanceminkowski.cpp -o distanceminkowski; echo 3 1 2 3 2 0 4 |./a.out"
+        "!g++ distanceminkowski.cpp; echo 3 1 2 3 2 0 4 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -3531,7 +3531,7 @@
         "outputId": "e9e62ca6-b5c0-411b-9d19-7b4bfb671581"
       },
       "source": [
-        "!g++ dice01.cpp -o dice01; echo 1 2 4 8 16 32 SE |./a.out\n",
+        "!g++ dice01.cpp; echo 1 2 4 8 16 32 SE |./a.out\n",
         "!echo 1 2 4 8 16 32 EESWN |./a.out"
       ],
       "execution_count": null,
@@ -3657,7 +3657,7 @@
         "outputId": "c538014d-cf92-4e3e-a5c0-b5c52af9b481"
       },
       "source": [
-        "!g++ dice02.cpp -o dice02; echo 1 2 3 4 5 6 3 6 5 1 3 3 2 |./a.out"
+        "!g++ dice02.cpp; echo 1 2 3 4 5 6 3 6 5 1 3 3 2 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -3776,7 +3776,7 @@
         "outputId": "d50e18bd-f868-4ec3-ee62-641c290771e2"
       },
       "source": [
-        "!g++ dice03.cpp -o dice03; echo 1 2 3 4 5 6 6 2 4 3 5 1 |./a.out"
+        "!g++ dice03.cpp; echo 1 2 3 4 5 6 6 2 4 3 5 1 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
@@ -3911,7 +3911,7 @@
         "outputId": "6f848c21-fb37-4a35-b9e8-617ba9d20dab"
       },
       "source": [
-        "!g++ dice04.cpp -o dice04; echo 3 1 2 3 4 5 6 6 2 4 3 5 1 6 5 4 3 2 1 |./a.out\n",
+        "!g++ dice04.cpp; echo 3 1 2 3 4 5 6 6 2 4 3 5 1 6 5 4 3 2 1 |./a.out\n",
         "!echo 3 1 2 3 4 5 6 6 5 4 3 2 1 5 4 3 2 1 6 |./a.out"
       ],
       "execution_count": null,
@@ -4022,7 +4022,7 @@
         "outputId": "1f25b10c-c3de-4502-cf5c-3d27cee29796"
       },
       "source": [
-        "!g++ insertionsort.cpp -o insertionsort; echo 6 5 2 4 6 1 3 |./a.out"
+        "!g++ insertionsort.cpp; echo 6 5 2 4 6 1 3 |./a.out"
       ],
       "execution_count": null,
       "outputs": [
