--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -6,8 +6,7 @@
       "name": "learncpp.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNEDB//Y1lZObSGxiCloHi5",
+      "authorship_tag": "ABX9TyM/9j/oLc7wInXZACQqqGbU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -705,10 +704,12 @@
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
+        "\n",
         "const string  str = R\"(\n",
         "2 3\n",
         "tiis is a ペン\n",
         ")\";\n",
+        "\n",
         "int main(){\n",
         "    stringstream ss(str);\n",
         "    int N, M;\n",
@@ -729,15 +730,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W2iNf4roPALx",
-        "outputId": "8047f6bb-f0db-45ee-c511-8683890aff44"
+        "outputId": "363f41a1-0b4d-4541-db90-a4fe3cabc895"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting temp.cpp\n"
+            "Writing temp.cpp\n"
           ]
         }
       ]
@@ -752,9 +753,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ivp5uovGP6AU",
-        "outputId": "0d3b9966-2eb5-4c71-e3e1-dbc2fecf95f5"
+        "outputId": "1ba1ed7d-a8a5-4a24-b6e6-abd267667f26"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -3222,7 +3223,7 @@
         "  cout << formatVecStr(cars) << endl;\n",
         "}"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3245,7 +3246,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3295,7 +3296,7 @@
         "  cout << formatVecStr(cars) << endl;\n",
         "}\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3318,7 +3319,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3350,7 +3351,7 @@
         "  cout << meal << endl;\n",
         "}\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3373,7 +3374,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3406,7 +3407,7 @@
         "  cout << &food << endl; // 変数 food のメモリーアドレス\n",
         "}"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3429,7 +3430,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3795,7 +3796,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3818,7 +3819,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3853,7 +3854,7 @@
         "  cout << z;\n",
         "}\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3876,7 +3877,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3921,7 +3922,7 @@
         "  cout << firstNum << secondNum << endl;\n",
         "}\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3944,7 +3945,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3992,7 +3993,7 @@
         },
         "outputId": "253e7070-0299-464c-e924-60bc905f56ba"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4015,7 +4016,7 @@
         },
         "outputId": "3f6f013d-c5af-4aa7-98ad-2a685b8dcb6c"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4059,7 +4060,7 @@
         "  cout << \"Double: \" << myNum2;\n",
         "}"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4115,7 +4116,7 @@
         "  cout << myObj.myString; \n",
         "}\n"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4138,7 +4139,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4187,7 +4188,7 @@
         "  cout << carObj2.brand << \" \" << carObj2.model << \" \" << carObj2.year << endl;\n",
         "}"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4210,7 +4211,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4250,7 +4251,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4273,7 +4274,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4314,7 +4315,7 @@
         "  myObj.myMethod();  // Call the method\n",
         "}"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4337,7 +4338,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4932,7 +4933,7 @@
         "  MyReadFile.close();\n",
         "}"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4955,7 +4956,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5037,7 +5038,7 @@
         "id": "p4XelHtyZfmc",
         "outputId": "092a124a-69c3-402e-8fae-6bcc083300d8"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5060,7 +5061,7 @@
         "id": "I7AyIf6IZg3A",
         "outputId": "4fa8eaee-1235-4479-9f57-0dc7ec16ed38"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5112,7 +5113,7 @@
         },
         "outputId": "60321aa5-e79d-42a1-879e-e1c3f1a52876"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5135,7 +5136,7 @@
         },
         "outputId": "f409b5c3-ce4d-482e-bf2e-94ab88d3e440"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5208,7 +5209,7 @@
         },
         "outputId": "5c0bfc98-2aff-4f4f-d300-053c834760d7"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5239,7 +5240,7 @@
         "Blest be the man that spares these stones,\n",
         "And cursed be he that moves my bones."
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5280,7 +5281,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5303,7 +5304,7 @@
         "id": "qaTYujXEn8Dq",
         "outputId": "5134e970-e65e-4c39-84ec-418c1928d52d"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5327,7 +5328,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8255,7 +8256,7 @@
         "    cout << Sum<string>(\"red\",\"blue\") << endl; // redblue になる\n",
         "}"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8278,7 +8279,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
